# mpl-pe-pattern-usgs

./: LICENSE  README.md  pyproject.toml  readthedocs.yml  setup.cfg  setup.py
docs/: API.rst  Contributing.rst  conf.py  index.rst
examples/: README.rst  demo.py
mpl_pe_pattern_usgs/: __init__.py  pattern_usgs.json  pattern_usgs.py
