[metadata]
name=mpl_pe_pattern_usgs
author=Jae-Joon Lee
author_email=lee.j.joon@gmail.com
url = https://github.com/lee_j_joon/mpl-pe-pattern-usgs
license=BSD 3-Clause
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:

install_requires =
    matplotlib
    mpl-visual-context

classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Framework :: Matplotlib

[options.extras_require]
test =
    black
    pytest
    pytest-mpl
doc =
    sphinx
    numpydoc
    sphinx_rtd_theme
    sphinx-copybutton
    sphinx-autobuild
    sphinx_gallery>=0.8.2
    autoapi
dev =
    %(test)s
    %(doc)s

[options.package_data]
mpl_pe_pattern_usgs =
    pattern_usgs.json
    pattern_usgs_vertices_codes.npz
